# nlp-transcript-intelligence

./: .gitignore  LICENSE  README.md  multimodal_merged_pipeline.ipynb  pyproject.toml  requirements.txt
configs/: align.yaml  asr.yaml  full_pipeline.yaml  ingest.yaml  ocr.yaml  project_example.yaml  summarise.yaml
eval/: asr_backends.py  asr_eval.py  asr_eval_notebook.ipynb  asr_eval_notebook_utils.py  asr_manifests.py  asr_metrics.py  asr_models.json  eval_README.md  eval_notebook_utils.py  ocr_backends.py  ocr_eval.py  ocr_eval_notebook.ipynb  ocr_manifests.py  ocr_metrics.py
eval/configs/: asr.yaml  ocr.yaml
eval/manifests/: asr_manifest.csv  librispeech_dev-clean_manifest.csv  librispeech_dev-other_manifest.csv  librispeech_test-clean_manifest.csv  librispeech_test-other_manifest.csv
eval/results/dev-clean/: asr_eval_base.csv  asr_eval_base.en.csv  asr_eval_citrinet_1024.csv  asr_eval_citrinet_256.csv  asr_eval_citrinet_384.csv  asr_eval_citrinet_512.csv  asr_eval_conformer_ctc_large.csv  asr_eval_conformer_ctc_medium.csv  asr_eval_conformer_ctc_small.csv  asr_eval_conformer_transducer_large.csv  asr_eval_conformer_transducer_medium.csv  asr_eval_conformer_transducer_small.csv  asr_eval_distil-large-v3.csv  asr_eval_hubert-large-ls960-ft.csv  (+49 more)
notebooks/: 0_introduction.ipynb  video_summary.ipynb
src/: align.py  app.py  asr.py  copy_cuda_dlls.py  embeddings.py  ingest.py  main.py  models.py  ocr.py  qa.py  summarise.py  utils.py
tests/: conftest.py  test_aligns.py  test_asr.py  test_ingest.py  test_main.py  test_models.py  test_ocr.py  test_summarise.py
(+68 files in other folders)
